# microservices-django-rabbitmq

./: README.md
auth/: pyproject.toml
auth/auth/: db.sqlite3
auth/auth/auth/: settings.py  urls.py
auth/auth/authentication/: urls.py  views.py
product/: pyproject.toml
product/product/product/: settings.py  urls.py
product/product/productapp/: models.py  serializers.py  urls.py  views.py
